Fix element wrapping for overview and transactions pages.

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -98,7 +98,7 @@
 }
 
 .main-content {
-  width: 100%;
+  min-width: 1500px;
   position: relative;
   display: block;
 }
